WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187755
[JSC] JSON.stringify's replacer should use `isArray` instead of JSArray checks
https://bugs.webkit.org/show_bug.cgi?id=187755
Summary
[JSC] JSON.stringify's replacer should use `isArray` instead of JSArray checks
Yusuke Suzuki
Reported
2018-07-18 05:55:35 PDT
[JSC] JSON.stringify's replacer should use `isArray` instead of JSArray checks
Attachments
Patch
(7.33 KB, patch)
2018-07-18 05:58 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2018-07-18 05:58:40 PDT
Created
attachment 345239
[details]
Patch
EWS Watchlist
Comment 2
2018-07-18 06:03:06 PDT
Attachment 345239
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/JSONObject.cpp:236: Extra space before ) [whitespace/parens] [2] ERROR: Source/JavaScriptCore/runtime/JSONObject.cpp:240: Extra space before ) [whitespace/parens] [2] ERROR: Source/JavaScriptCore/runtime/JSONObject.cpp:243: Extra space before ) [whitespace/parens] [2] ERROR: Source/JavaScriptCore/runtime/JSONObject.cpp:251: Extra space before ) [whitespace/parens] [2] Total errors found: 4 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3
2018-07-18 11:15:47 PDT
Comment on
attachment 345239
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2018-07-18 11:17:18 PDT
Comment on
attachment 345239
[details]
Patch Thanks!
WebKit Commit Bot
Comment 5
2018-07-18 11:31:15 PDT
Comment on
attachment 345239
[details]
Patch Clearing flags on attachment: 345239 Committed
r233918
: <
https://trac.webkit.org/changeset/233918
>
WebKit Commit Bot
Comment 6
2018-07-18 11:31:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-07-18 11:32:22 PDT
<
rdar://problem/42343999
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug